commite de algumas correções nos testes